--- a/package.json
+++ b/package.json
@@ -11,14 +11,22 @@
   "author": "Jorge Fernandez",
   "license": "ISC",
   "devDependencies": {
+    "@types/bluebird": "^3.5.35",
     "@types/express": "^4.17.12",
+    "@types/helmet": "^4.0.0",
+    "@types/morgan": "^1.9.2",
+    "@types/node": "^15.6.1",
     "@types/sequelize": "^4.28.9",
+    "@types/validator": "^13.1.3",
     "concurrently": "^6.2.0",
     "nodemon": "^2.0.7",
     "typescript": "^4.3.2"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
+    "morgan": "^1.10.0",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.6.2"
