--- a/package.json
+++ b/package.json
@@ -4,22 +4,30 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"tsc --watch\" \"nodemon dist/index.js\"",
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "concurrently \"tsc --watch\" \"nodemon dist/index.js\""
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/HELL0ANTHONY/REST-API-with-Node-and-Typescript.git"
   },
   "keywords": [],
   "author": "Jorge Fernandez",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/HELL0ANTHONY/REST-API-with-Node-and-Typescript/issues"
+  },
+  "homepage": "https://github.com/HELL0ANTHONY/REST-API-with-Node-and-Typescript#readme",
   "devDependencies": {
-    "@types/bluebird": "^3.5.35",
     "@types/express": "^4.17.12",
     "@types/helmet": "^4.0.0",
     "@types/morgan": "^1.9.2",
     "@types/node": "^15.6.1",
     "@types/sequelize": "^4.28.9",
-    "@types/validator": "^13.1.3",
     "concurrently": "^6.2.0",
     "nodemon": "^2.0.7",
+    "ts-node": "^10.0.0",
+    "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.2"
   },
   "dependencies": {
